3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/shop.c: When we are counting unpaid items and their values, to check
if a player may leave a shop, make certain that we count all of them, and
don't stop when we have dropped into a container (such as a spellbook)
Brendan Lally 2005-11-09

plugins/cfpython/cfpython.c: Add missing 'PyType_Ready' calls for map and player,
 failure to do so crashes with Python objects destructors set to 0.
Ryo 2005-11-07

server/spell_effect.c: fix WoR not executing on cursed ground with WIZCAST set.
Ryo 2005-11-06

server/skills.c: In do_throw() abort processing if the thrown object was
   destroyed before it gets its first move.
Andreas Kirschbaum 2005-11-06

server/build_map.c: test FLAG_IS_FLOOR too, type == FLOOR is not always enough.
Ryo 2005-11-05

server/shop.c: In value_limit() return the unmodified item price if not in a
   shop or not for a player.
Andreas Kirschbaum 2005-11-05

plugins/cfpython/cfpython.c: added GetPrivateDictionary and GetSharedDictionary
 methods to keep data between runs and share data between scripts.
Ryo 2005-11-05

plugins/Makefile,plugins/cfanim/Makefile: Remove files to be generated by
   configure.
server/main.c: Fix possible out-of-bounds array access.
Andreas Kirschbaum 2005-11-05

Fix case for [sg]etReturnValue. Add compare operator for object and map (of course
 only == is relevant).
Modified files:
 plugins/cfpython/include/cfpython_map_private.h
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython.c
 plugins/cfpython/cfpython_map.c
 plugins/cfpython/cfpython_object.c
Ryo 2005-11-05

aclocal.m4, configure, utils/config.guess, utils/config.sub, utils/ltmain.sh,